Update index.html to modify Twitter metadata and images
Removed Twitter card metadata and added image tags for screenshots.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
   <meta property="og:image" content="https://www.stewarthoffman.com/og-image.jpg" />
   -->
 
-  <!-- SEO: Twitter card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Stewart Hoffman Games & Books" />
-  <meta name="twitter:description" content="Indie games and books by Stewart Hoffman. Plastic Tide support and updates." />
+  
   <!-- Optional later:
   <meta name="twitter:image" content="https://www.stewarthoffman.com/og-image.jpg" />
   -->
@@ -197,19 +194,16 @@
       <!-- Room for 4 screenshots -->
       <div class="shot-grid" aria-label="Plastic Tide screenshots">
         <div class="shot">
-          Screenshot 1<br><span style="opacity:.75">Add an &lt;img&gt; here</span>
-          <!-- Example:
-          <img src="screenshots/plastic-tide-1.jpg" alt="Plastic Tide gameplay screenshot 1">
-          -->
+          <img src="/images/PlasticTide_1.jpg" alt="Welcome Screen" />
         </div>
         <div class="shot">
-          Screenshot 2<br><span style="opacity:.75">Add an &lt;img&gt; here</span>
+          <img src="/images/PlasticTide_2.jpg" alt="Main Menu" />
         </div>
         <div class="shot">
-          Screenshot 3<br><span style="opacity:.75">Add an &lt;img&gt; here</span>
+          <img src="/images/PlasticTide_3.jpg" alt="Level 7" />
         </div>
         <div class="shot">
-          Screenshot 4<br><span style="opacity:.75">Add an &lt;img&gt; here</span>
+          <img src="/images/PlasticTide_4.jpg" alt="Level 12" />
         </div>
       </div>
 
