Change screenshot image formats to PNG
Updated image file extensions from .jpg to .png for screenshots.

--- a/index.html
+++ b/index.html
@@ -194,16 +194,16 @@
       <!-- Room for 4 screenshots -->
       <div class="shot-grid" aria-label="Plastic Tide screenshots">
         <div class="shot">
-          <img src="/images/PlasticTide_1.jpg" alt="Welcome Screen" />
+          <img src="images/PlasticTide_1.png" alt="Welcome Screen" />
         </div>
         <div class="shot">
-          <img src="/images/PlasticTide_2.jpg" alt="Main Menu" />
+          <img src="images/PlasticTide_2.png" alt="Main Menu" />
         </div>
         <div class="shot">
-          <img src="/images/PlasticTide_3.jpg" alt="Level 7" />
+          <img src="images/PlasticTide_3.png" alt="Level 7" />
         </div>
         <div class="shot">
-          <img src="/images/PlasticTide_4.jpg" alt="Level 12" />
+          <img src="images/PlasticTide_4.png" alt="Level 12" />
         </div>
       </div>
 
