Add height and width properties to .shot class
Set height and width for .shot class in CSS.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
       text-align: center;
       padding: 10px;
       overflow: hidden;
+      height: 500;
+      width: 218;
     }
 
     /* When you add images, just put <img> inside .shot */
