Fix CSS units for height and width in index.html
Updated height and width properties to include 'px' units.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       text-align: center;
       padding: 10px;
       overflow: hidden;
-      height: 500;
-      width: 218;
+      height: 500px;
+      width: 218px;
     }
 
     /* When you add images, just put <img> inside .shot */
