Center brand name in header link
Updated brand link to include centered text.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <header>
     <div class="wrap">
       <!-- No nav, name top-left -->
-      <a class="brand" href="/">Stewart Hoffman Games &amp; Books</a>
+      <a class="brand" href="/"><center>Stewart Hoffman Games</center></a>
     </div>
   </header>
 
