Update SEO meta tags in index.html
Updated title and meta description for SEO improvements. Removed 'Books' from the title and adjusted Open Graph properties accordingly.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Stewart Hoffman Games & Books | Plastic Tide Support</title>
+  <title>Stewart Hoffman Games | Plastic Tide Support</title>
 
   <!-- SEO: concise, keyword-relevant description -->
-  <meta name="description" content="Stewart Hoffman Games & Books. Indie games and books by Stewart Hoffman. Plastic Tide — a water-themed puzzle game. Support and contact information." />
+  <meta name="description" content="Stewart Hoffman Games. Indie games by Stewart Hoffman. Plastic Tide — a water-themed puzzle game. Support and contact information." />
 
   <!-- SEO: canonical helps avoid duplicate URL issues -->
   <link rel="canonical" href="https://www.stewarthoffman.com/" />
 
   <!-- SEO: Open Graph for nicer sharing previews -->
-  <meta property="og:site_name" content="Stewart Hoffman Games & Books" />
-  <meta property="og:title" content="Stewart Hoffman Games & Books" />
-  <meta property="og:description" content="Indie games and books by Stewart Hoffman. Plastic Tide support and updates." />
+  <meta property="og:site_name" content="Stewart Hoffman Games" />
+  <meta property="og:title" content="Stewart Hoffman Games" />
+  <meta property="og:description" content="Indie games by Stewart Hoffman. Plastic Tide support and updates." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.stewarthoffman.com/" />
   <!-- Optional later: add an image for social previews (1200x630 recommended)
@@ -216,7 +216,7 @@
         It’s designed to be fun first, while quietly nudging awareness about ocean pollution.
       </p>
       <p>
-        More updates (and more oddball projects) live here under Stewart Hoffman Games &amp; Books.
+        More updates (and more oddball projects) live here under Stewart Hoffman Games.
       </p>
 
       <div class="cards">
