--- a/index.html
+++ b/index.html
@@ -18,16 +18,7 @@
   <meta property="og:description" content="Indie games by Stewart Hoffman. Plastic Tide support and updates." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.stewarthoffman.com/" />
-  <!-- Optional later: add an image for social previews (1200x630 recommended)
-  <meta property="og:image" content="https://www.stewarthoffman.com/og-image.jpg" />
-  -->
 
-  
-  <!-- Optional later:
-  <meta name="twitter:image" content="https://www.stewarthoffman.com/og-image.jpg" />
-  -->
-
-  <!-- Basic, fast styling; no frameworks -->
   <style>
     :root {
       --bg: #0b0f14;
@@ -84,33 +75,63 @@
       padding: 18px;
     }
 
+    /* Existing 4-up grid for Plastic Tide (unchanged behavior on desktop) */
     .shot-grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 10px;
       margin-bottom: 18px;
-      justify-items: center;   /* <-- add this */
+      justify-items: center;
     }
 
-
     .shot {
-  aspect-ratio: 9 / 19.5;
-  border-radius: 14px;
-  border: 1px dashed rgba(234,240,255,.22);
-  background: linear-gradient(180deg, rgba(143,211,255,.08), rgba(143,211,255,.03));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--muted);
-  font-size: 13px;
-  text-align: center;
-  padding: 10px;
-  overflow: hidden;
-}
+      aspect-ratio: 9 / 19.5;
+      border-radius: 14px;
+      border: 1px dashed rgba(234,240,255,.22);
+      background: linear-gradient(180deg, rgba(143,211,255,.08), rgba(143,211,255,.03));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--muted);
+      font-size: 13px;
+      text-align: center;
+      padding: 10px;
+      overflow: hidden;
+    }
 
-
-    /* When you add images, just put <img> inside .shot */
     .shot img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    /* NEW: Rocket Rescue 2-column layout, 2 stacked per column */
+    .shot-grid-2col {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      margin-bottom: 18px;
+      justify-items: center;
+    }
+
+    .shot-col {
+      display: grid;
+      gap: 10px;
+      width: 100%;
+    }
+
+    /* Optional: keep the RR screenshots from getting too tall */
+    .shot-land {
+      aspect-ratio: 600 / 338; /* roughly iPhone landscape screenshot shape */
+      border-radius: 14px;
+      border: 1px dashed rgba(234,240,255,.22);
+      background: linear-gradient(180deg, rgba(143,211,255,.08), rgba(143,211,255,.03));
+      overflow: hidden;
+      width: 100%;
+    }
+
+    .shot-land img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -165,22 +186,27 @@
     }
 
     @media (max-width: 760px) {
-  .shot-grid {
-    grid-template-columns: 1fr;      /* one per row (nicest for screenshots) */
-    justify-items: center;           /* center the screenshot cards */
-  }
-.shot-grid { grid-template-columns: repeat(2, 1fr); justify-items: center; }
-  .shot {
-    width: min(520px, 100%);         /* keep them from getting huge */
-  }
+      /* Rocket Rescue: stack all four */
+      .shot-grid-2col {
+        grid-template-columns: 1fr;
+      }
 
-  .cards { grid-template-columns: 1fr; }
-  h1 { font-size: 24px; }
-}
+      /* Plastic Tide: stack one per row (your intent) */
+      .shot-grid {
+        grid-template-columns: 1fr;
+        justify-items: center;
+      }
 
+      /* Keep screenshot cards from getting enormous */
+      .shot {
+        width: min(520px, 100%);
+      }
+
+      .cards { grid-template-columns: 1fr; }
+      h1 { font-size: 24px; }
+    }
   </style>
 
-  <!-- Optional SEO: JSON-LD (helps search engines understand your site) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -195,14 +221,44 @@
 <body>
   <header>
     <div class="wrap">
-      <!-- No nav, name top-left -->
       <a class="brand" href="/"><center>Stewart Hoffman Games</center></a>
     </div>
   </header>
 
   <main class="wrap">
+
+    <!-- NEW: Rocket Rescue featured block at the top -->
+    <section class="hero" style="margin-bottom: 14px;">
+      <div class="shot-grid-2col" aria-label="Rocket Rescue screenshots">
+        <div class="shot-col">
+          <div class="shot-land">
+            <img src="images/rocket_rescue_1.png" alt="Rocket Rescue screenshot 1" />
+          </div>
+          <div class="shot-land">
+            <img src="images/rocket_rescue_2.png" alt="Rocket Rescue screenshot 2" />
+          </div>
+        </div>
+
+        <div class="shot-col">
+          <div class="shot-land">
+            <img src="images/rocket_rescue_3.png" alt="Rocket Rescue screenshot 3" />
+          </div>
+          <div class="shot-land">
+            <img src="images/rocket_rescue_4.png" alt="Rocket Rescue screenshot 4" />
+          </div>
+        </div>
+      </div>
+
+      <div class="kicker">Featured Game</div>
+      <h1>Rocket Rescue!</h1>
+      <p>
+        Defend the launch. Save the crew. Blast invading aliens in this retro arcade action game inspired by classic space shooters.
+        Fast, frantic, and fun.
+      </p>
+    </section>
+
+    <!-- Existing Plastic Tide section (kept intact) -->
     <section class="hero">
-      <!-- Room for 4 screenshots -->
       <div class="shot-grid" aria-label="Plastic Tide screenshots">
         <div class="shot">
           <img src="images/PlasticTide_1.png" alt="Welcome Screen" />
@@ -218,7 +274,6 @@
         </div>
       </div>
 
-      <!-- Marketing text -->
       <div class="kicker">Featured Game</div>
       <h1>Plastic Tide</h1>
       <p>
@@ -253,7 +308,6 @@
   </main>
 
   <script>
-    // Tiny convenience
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
