Add app store download badge to index.html
Added app store badge section to promote the app.

--- a/index.html
+++ b/index.html
@@ -205,6 +205,17 @@
       .cards { grid-template-columns: 1fr; }
       h1 { font-size: 24px; }
     }
+    .appstore-wrap {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 18px;
+}
+
+.appstore-wrap img {
+  width: 180px;     /* scales nicely with your design */
+  height: auto;
+}
+
   </style>
 
   <script type="application/ld+json">
@@ -283,6 +294,15 @@
       <p>
         More updates (and more oddball projects) live here under Stewart Hoffman Games.
       </p>
+      <div class="appstore-wrap">
+  <a href="https://apps.apple.com/us/app/plastic-tide/id6757958696?itscg=30200&itsct=apps_box_badge&mttnsubad=6757958696"
+     aria-label="Download Plastic Tide on the App Store">
+    <img
+      src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1769212800"
+      alt="Download on the App Store" />
+  </a>
+</div>
+
 
       <div class="cards">
         <div class="card">
